# django-agui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: example_agents.py
examples/example_app/clients/: __init__.py  cli.py
examples/example_app/example_app/: __init__.py  apps.py  settings.py  urls.py
examples/example_app/example_app/playground/: __init__.py  views.py
examples/example_app/frontend/: index.html  package.json  vite.config.ts
examples/example_app/frontend/src/: App.tsx  index.css
examples/example_app/frontend/src/components/: theme-toggle.tsx
examples/example_app/frontend/src/components/chat/: ChatInterface.tsx
examples/example_app/frontend/src/components/ui/: dropdown-menu.tsx  select.tsx
examples/example_app/frontend/src/hooks/: useAGUIChat.ts
examples/playground/: .env.example  Procfile  README.md  pyproject.toml
examples/playground/example_app/: __init__.py  apps.py  settings.py  urls.py  wsgi.py
examples/playground/example_app/playground/: views.py
examples/playground/frontend/: package.json
examples/playground/frontend/src/: App.tsx
examples/playground/frontend/src/components/: theme-toggle.tsx
examples/playground/frontend/src/components/chat/: ChatInterface.tsx
examples/playground/frontend/src/components/ui/: dropdown-menu.tsx
examples/playground/frontend/src/hooks/: useAGUIChat.ts  useTheme.tsx
examples/playground/templates/: playground.html
src/django_agui/: __init__.py  apps.py  checks.py  decorators.py  encoders.py  models.py  router_drf.py  runtime.py  settings.py  types.py  urls.py  views.py  views_drf.py
src/django_agui/agents/: __init__.py  registry.py
src/django_agui/api/: __init__.py  urls.py  views.py
src/django_agui/backends/: __init__.py  auth.py  base.py
src/django_agui/contrib/: __init__.py
src/django_agui/contrib/bolt/: __init__.py  backend.py  views.py
src/django_agui/contrib/drf/: __init__.py  backend.py  views.py
src/django_agui/contrib/ninja/: __init__.py  backend.py  views.py
src/django_agui/integrations/: __init__.py  base.py
src/django_agui/integrations/agno/: __init__.py  agent.py
src/django_agui/integrations/langgraph/: __init__.py  agent.py
src/django_agui/integrations/llamaindex/: __init__.py  agent.py
src/django_agui/migrations/: 0001_initial.py
src/django_agui/storage/: __init__.py  base.py  django.py  examples.py  router.py
tests/: conftest.py  settings.py  test_agui.py  test_decorators.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_bolt.py  test_drf.py  test_ninja.py
tests/unit/: test_checks.py  test_core.py  test_decorators.py  test_framework_adapters.py  test_urls.py  test_views.py
